--- a/app/src/main/res/layout/activity_tao_q_r_vi_tri.xml
+++ b/app/src/main/res/layout/activity_tao_q_r_vi_tri.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
-    tools:context=".CodeScreen.taoQRViTri">
+    android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical">
     <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -13,7 +12,6 @@
         android:background="@color/primary"
         app:titleTextColor="@color/white"
         />
-
     <EditText
         android:id="@+id/editTextTextPersonName2"
         android:layout_width="match_parent"
@@ -21,6 +19,7 @@
         android:layout_below="@id/toolbar_taoQRviTri"
         android:ems="10"
         android:inputType="textPersonName"
+        android:hint="kinh do"
         android:paddingLeft="10dp" />
 
     <EditText
@@ -29,13 +28,15 @@
         android:layout_height="50dp"
         android:layout_below="@id/editTextTextPersonName2"
         android:ems="10"
+        android:hint="vi do"
         android:inputType="textPersonName"
         android:paddingLeft="10dp" />
-
-    <com.google.android.gms.maps.MapView
-        android:id="@+id/mapView"
+    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:map="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/editTextTextPersonName3" />
-
-</RelativeLayout>
+        tools:context=".CodeScreen.taoQRViTri" />
+</LinearLayout>
