--- a/app/src/main/res/layout/activity_screen_lich_su_tao.xml
+++ b/app/src/main/res/layout/activity_screen_lich_su_tao.xml
@@ -13,4 +13,10 @@
         android:background="@color/primary"
         app:titleTextColor="@color/white"
         />
+
+    <ListView
+        android:id="@+id/lv_lichsutao"
+        android:layout_below="@id/toolbar_lstao"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </RelativeLayout>
