--- a/app/src/main/res/layout/activity_tao_q_r_web.xml
+++ b/app/src/main/res/layout/activity_tao_q_r_web.xml
@@ -15,7 +15,7 @@
         />
 
     <EditText
-        android:id="@+id/editTextTextPersonName4"
+        android:id="@+id/edt_webTao"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/toolbar_taoQRweb"
