--- a/app/src/main/res/layout/activity_vitri_show_code.xml
+++ b/app/src/main/res/layout/activity_vitri_show_code.xml
@@ -1,31 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".ShowCode.webXemMa">
+    tools:context=".ShowCode.vitriShowCode">
+
     <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/toolbar_webXemMa"
+        android:id="@+id/toolbar_viTriShow"
         app:title="Máy Quét"
         android:background="@color/primary"
         app:titleTextColor="@color/white"
         />
     <LinearLayout
+        android:layout_below="@+id/toolbar_viTriShow"
         android:layout_width="match_parent"
-        android:orientation="vertical"
         android:padding="10dp"
+        android:orientation="vertical"
         android:layout_height="wrap_content">
-        <ImageView
-            android:id="@+id/img_hinhAnhMa"
-            android:layout_width="match_parent"
-            android:layout_height="450dp"
-            tools:srcCompat="@tools:sample/avatars" />
+
         <TextView
-            android:id="@+id/tv_noiDungMa"
+            android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -34,7 +31,7 @@
             android:text="TextView" />
 
         <TextView
-            android:id="@+id/tv_theLoaiMa"
+            android:id="@+id/textView4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -43,12 +40,30 @@
             android:text="TextView" />
 
         <TextView
-            android:id="@+id/tv_ngayThangMa"
+            android:id="@+id/textView5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textSize="16dp"
             android:text="TextView" />
+        <Button
+            android:textAlignment="viewStart"
+            android:drawableLeft="@drawable/ic_baseline_qr_code_24"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/trasn"
+            android:text="Xem Mã"
+            android:textColor="@color/black"
+            android:onClick="goToXemMa"
+            />
+        <Button
+            android:textAlignment="viewStart"
+            android:drawableLeft="@drawable/ic_baseline_location_on_24"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/trasn"
+            android:text="Mở Vị Trí"
+            android:textColor="@color/black"
+            />
     </LinearLayout>
-
-</LinearLayout>
+</RelativeLayout>
