--- a/app/src/main/res/layout/activity_web_show_code.xml
+++ b/app/src/main/res/layout/activity_web_show_code.xml
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/tv_webnoidung_kq"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -30,7 +30,7 @@
             android:text="TextView" />
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/tv_webtheloai_kq"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -39,7 +39,7 @@
             android:text="TextView" />
 
         <TextView
-            android:id="@+id/textView5"
+            android:id="@+id/tv_webtg_kq"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
