lam chuc nang share

--- a/app/src/main/res/menu/menu3.xml
+++ b/app/src/main/res/menu/menu3.xml
@@ -6,6 +6,7 @@
         android:title="Location"
         app:showAsAction="always"/>
     <item
+        android:id="@+id/share"
         android:icon="@drawable/share_menu"
         android:title="Check"
         app:showAsAction="always"/>
