--- a/app/src/main/res/layout/activity_web_show_code.xml
+++ b/app/src/main/res/layout/activity_web_show_code.xml
@@ -63,6 +63,7 @@
             android:background="@color/trasn"
             android:text="Mở trên web"
             android:textColor="@color/black"
+            android:onClick="moTrenWeb"
             />
     </LinearLayout>
 </RelativeLayout>
