--- a/app/src/main/res/layout/activity_tao_q_r_app.xml
+++ b/app/src/main/res/layout/activity_tao_q_r_app.xml
@@ -14,9 +14,16 @@
         app:titleTextColor="@color/white"
         />
 
-    <ListView
+<!--    <ListView-->
+<!--        android:layout_below="@+id/toolbar_taoQRapp"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent" />-->
+    <TextView
         android:layout_below="@+id/toolbar_taoQRapp"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_marginTop="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="25dp"
+        android:text="Nội dung sao chép đang rỗng!"/>
 
 </RelativeLayout>
