Thêm chức năng xóa cho 1 màn hình

--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -8,5 +8,6 @@
     <item
         android:icon="@drawable/ic_baseline_delete_24"
         android:title="Xoa"
+        android:id="@+id/delete"
         app:showAsAction="always"/>
 </menu>
