--- a/app/src/main/res/layout/activity_van_ban_show.xml
+++ b/app/src/main/res/layout/activity_van_ban_show.xml
@@ -62,6 +62,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/trasn"
+            android:onClick="guiTinNhan"
             android:text="Gửi tin nhắn"
             android:textColor="@color/black"
             />
