--- a/app/src/main/res/layout/activity_barcode_show.xml
+++ b/app/src/main/res/layout/activity_barcode_show.xml
@@ -64,6 +64,7 @@
             android:background="@color/trasn"
             android:text="Tìm Kiếm sản phẩm trên web"
             android:textColor="@color/black"
+            android:onClick="timKiemWeb"
             />
     </LinearLayout>
 </RelativeLayout>
