--- a/app/src/main/res/layout/activity_van_ban_show.xml
+++ b/app/src/main/res/layout/activity_van_ban_show.xml
@@ -74,6 +74,7 @@
             android:background="@color/trasn"
             android:text="Tìm Kiếm Trên Mạng"
             android:textColor="@color/black"
+            android:onClick="timKiemWeb"
             />
     </LinearLayout>
 </RelativeLayout>
