--- a/app/src/main/res/layout/cell.xml
+++ b/app/src/main/res/layout/cell.xml
@@ -6,9 +6,10 @@
 
     <ImageView
         android:id="@+id/img_anhTheLoai"
-        android:layout_gravity="center"
         android:layout_width="24dp"
-        android:layout_height="24dp"/>
+        android:layout_height="24dp"
+        android:layout_gravity="center"
+        android:paddingLeft="4dp" />
 
     <LinearLayout
         android:layout_width="230dp"
@@ -19,12 +20,12 @@
         android:orientation="vertical">
 
         <TextView
-            android:textColor="@color/black"
             android:id="@+id/tv_noiDung"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="23sp"
-            android:text="TextView" />
+            android:text="TextView"
+            android:textColor="@color/black"
+            android:textSize="16sp" />
 
         <TextView
             android:textColor="@color/secondary_text"
